# hanzi-similar

./: .dockerignore  .gitignore  API_DOCS.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  GITHUB_ACTIONS.md  README.md  advanced_vectorizer.py  api_main.py  build-docker.bat  build-docker.ps1  build-docker.sh  check_codepoint_coverage.py  check_similarity.py  debug_retrieval.py  docker-compose.yml  docker-entrypoint.sh  download_model.py  generate_hanzi_images.py  generate_hanzi_svgs.py  hanzi_search.py  main.py  make.bat  openapi.yaml  pyproject.toml  query_embedding.py  search_similar.py  start-prod.bat  start-prod.sh  test_batch_api.py  vector_db.py  vectorize_images.py
.github/workflows/: docker-publish.yml  docker-simple.yml
api/: main.py  svg_renderer.py
chroma_db/c04feb55-219d-4af8-8484-90643fcd6fb4/: index_metadata.pickle
chroma_db/fd2b3175-b862-406f-820a-a21a0d415d07/: index_metadata.pickle
images/: missing_codepoints.txt
scripts/: download_model.py  install_systemd.sh  start.sh
static/: index.html  style.css
